Clarify array offsets and nondescript for ADRTAB

--- a/dos33.html
+++ b/dos33.html
@@ -751,9 +751,9 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                                                                                     ;                DW RUN  , RUN
                                                                                     ;                DW IBVT , IBVT
                                                                                     ;                DW AS1VT, AS1VT
-                                                                                    ;    While the second line, ADRTABE, is a little unorthodox,
-                                                                                    ;    using dual labels makes the array offsets
-                                                                                    ;    in code less non-descript:
+                                                                                    ;    While the second's line formatting, ADRTABE, is a little unorthodox
+                                                                                    ;    using dual labels makes the array offsets obvious compared to
+                                                                                    ;    the original non-descript code:
                                                                                     ;
                                                                                     ;        LDY ADRTABS+0,X    ; lo byte of start address; was LDA ADRTAB+1,X
                                                                                     ;        LDA ADRTABS+1,X    ; hi byte of start address; was LDA ADRTAB+2,X
