--- a/dos33.html
+++ b/dos33.html
@@ -4769,9 +4769,9 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
 
 <hr><hr class='join'>=== <a class="file" name="BOOTLDR">BOOTLDR</a> - Boot loader, Page <a class="page" name="page8">8</a>, <b class="ts">T0S0</b> - <b class="ts">T0S1</b>, $<span class='n'>B5FE</span> .. $<span class='n'>B7FF</span> ===<hr class='join'><hr>
                     001             SBTL '16-SECTOR DOS BOOT'
-                    002 <a class="d" name="HERE3L"     id="HERE3L"     >HERE3L      </a>EQU &gt;*                                          ; End of FVCBUFS = $35FD
-                    003 <a class="d" name="REMDR3"     id="REMDR3"     >REMDR3      </a>EQU 256-HERE3L                                  ; Remainder 3
-35FE:00 00          004             ORG *+<a class="v" href="#REMDR3">REMDR3</a>                                    ; *<a class="dumb" name="waste_35fe">wastes</a>* 2 bytes to page align BOOTLDR
+                    002 <a class="d" name="HERE3L"     id="HERE3L"     >HERE3L      </a>EQU &gt;*                                          ; End of FVCBUFS = $35FD, * = $35FE
+                    003 <a class="d" name="REMDR3"     id="REMDR3"     >REMDR3      </a>EQU 256-HERE3L                                  ; Remainder 2
+35FE:FD FE          004             ORG *+<a class="v" href="#REMDR3">REMDR3</a>                                    ; *<a class="dumb" name="waste_35fe">wastes</a>* 2 bytes to page align BOOTLDR
                     005 <a class="d" name="TRK0LDR"    id="TRK0LDR"    >TRK0LDR     </a>EQU *
                     006     DO &gt;<a class="do" href="#TRK0LDR">TRK0LDR</a><span class="macro">
                     007         ??? ;DELIBERATE ERROR IF NOT AT PAGE BOUNDARY       </span>
