--- a/dos33.html
+++ b/dos33.html
@@ -9,7 +9,7 @@
                         25          37              53                              85  89  93
 ####:## ## ##       ### LABEL       NMEMONIC        COMMENT                         ; Annotation
 
-Pages done:
+Pages left:
 
      10  20  30  40  50  60  70  80  90 100 110 120 130 140 150
   1  11  21  31  41  51  61  71  81  91 101 111 121 131 141 151
@@ -20,7 +20,7 @@ Pages done:
   6  16  26  36  46  56  66  76  86  96 106 116 126 136 146 n/a
   7  17  27  37  47  57  67  77  87  97 107 117 127 137 147 n/a
   8  18  28  38  48  58  68  78  88  98 108 118 128 138 148 n/a
-  9  19  29  39  49  59  69  79  89  99 109 119 129 139 149 n/a
+  9  19  29  39  49  59  69  79  --  99 109 119 129 139 149 n/a
 
 -->
 <html>
