--- a/dos33.html
+++ b/dos33.html
@@ -24,7 +24,7 @@ Pages left:
 
 -->
 <html>
-<title>Apple DOS 3.3C Source Code (HTML Version by Michael Pohoreski)</title>
+<title>Apple DOS 3.3C Source Code (Unified HTML and Annotated Version by Michael Pohoreski)</title>
 <head>
     <style>
 
@@ -268,7 +268,7 @@ span.patch {
     </style>
 </head>
 <body>
-<h1>Apple DOS 3.3C Source Code (HTML Version)</h1>
+<h1>Apple DOS 3.3C Source Code (Unified HTML and Annotated Version)</h1>
 
 <h1>0.0 Table of Contents</h1>
     <ul class="toc">
