Cleanup What To Do

--- a/dos33.html
+++ b/dos33.html
@@ -306,7 +306,7 @@ The <span class="i">intent</span> of providing this copyrighted source code is
  <i>Reading this source code will probably make you angry</i> at all the <b>dumb shit</b> it does.
  Look for all my <b>*sigh*</b> comments and
  <b><a class="dumb" href="#HNTDAFS1">HNTDAFS</a></b> (How NOT to Design a File System) links.
- Knowing "<b>What to do</b>" is not <i>as</i> important as knowing "<b>What NOT to do</b>."
+ While knowing "<b>What To Do</b>" is important, knowing "<b>What NOT To Do</b>" is even <i>more</i> important.
  As they say, <span class="i">"Hindsight is 20/20."</span>
 <p>
 <span class="b">DISCLAIMER:</span> <b>YOU MAY NOT USE APPLE'S SOURCE CODE EXCEPT FOR LEARNING</b>
